[gd_scene load_steps=3 format=3 uid="uid://cb1j2stdbvkr1"]

[ext_resource type="Script" path="res://MapScenes/location.gd" id="1_whc52"]
[ext_resource type="PackedScene" uid="uid://dh5so7qjmi0x4" path="res://CyberUpgrades/cyber_controls_box.tscn" id="2_6cwq5"]

[node name="Location" type="Marker2D"]
script = ExtResource("1_whc52")
cyber_controls_scene = ExtResource("2_6cwq5")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -2.0
offset_top = -2.0
offset_right = 18.0
offset_bottom = 18.0
mouse_filter = 2

[node name="VisibleSquare" type="ColorRect" parent="."]
z_as_relative = false
offset_right = 16.0
offset_bottom = 16.0
color = Color(0.85098, 0.180392, 0, 1)

[connection signal="gui_input" from="VisibleSquare" to="." method="_on_visible_square_gui_input"]
[connection signal="mouse_entered" from="VisibleSquare" to="." method="_on_visible_square_mouse_entered"]
[connection signal="mouse_exited" from="VisibleSquare" to="." method="_on_visible_square_mouse_exited"]
